# pi-os

./: .gdbinit  .gitignore  Cargo.toml
.cargo/: config.toml
common/: Cargo.toml
drivers/: Cargo.toml
kernel/: Cargo.toml  linker-arm.ld  linker-pi.ld  linker-uboot.ld  linker-x86.ld  linker.ld
kernel/src/: logger.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/arm/: mmu.rs  mod.rs
kernel/src/arch/arm/boot/: boot.S
kernel/src/arch/arm/context/: frame.rs  mod.rs  switch.S
kernel/src/arch/arm/exception/: entry.S  mod.rs  trap.rs  vectors.S
kernel/src/arch/arm/interrupt/: enable.rs  mod.rs
kernel/src/arch/x86/: mmu.rs  mod.rs  time.rs
kernel/src/arch/x86/boot/: boot.S
kernel/src/arch/x86/exception/: trap.rs
kernel/src/arch/x86/interrupt/: mod.rs
kernel/src/boot/: device_tree.rs  mod.rs  multiboot2.rs  probe.rs
kernel/src/fs/: block_device.rs  fd.rs  file.rs  mod.rs  vfs.rs
kernel/src/fs/dev/: framebuffer_file.rs  mod.rs  uart_file.rs
kernel/src/fs/fat/: fat32.rs
kernel/src/fs/file/: mod.rs  uart_file.rs
kernel/src/irq/: dispatch.rs  handlers.rs  mod.rs
kernel/src/kcore/: init.rs  mod.rs
kernel/src/kcore/sync/: mod.rs  spinlock.rs
kernel/src/mm/: buddy_allocator.rs  heap_allocator.rs  mmu.rs  mod.rs  page_allocator.rs  page_table.rs
kernel/src/process/: mod.rs  pcb.rs  stack.rs
kernel/src/process/sched/: scheduler.rs
kernel/src/subsystems/: mod.rs
kernel/src/subsystems/boot_sinks/: arm.rs  mod.rs  null.rs  x86.rs
kernel/src/subsystems/log_sinks/: mod.rs
kernel/src/syscall/: dispatch.rs  mod.rs
scripts/: build.sh  (+7 more)
(+62 files in other folders)
