[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
drivers = { path = "../drivers" }
common = { path = "../common" }
cfg-if = "1.0"
bitflags = { version = "2.11", default-features = false }
[[bin]]
name = "kernel"
path = "src/main.rs"
test = false

[features]
default = ["bcm2835"]
bcm2835 = []
bcm2711 = []